objects/PMV_Sales_Stage_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Duration__c</fullName>
        <label>Average Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buyer_Cycle__c</fullName>
        <label>Buyer Cycle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Threshold__c</fullName>
        <label>Completion Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dead_Lost_Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dead/Lost Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Hold_Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Hold Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Parts_Confidence__c</fullName>
        <label>Opportunity Parts Confidence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Parts_Process_Status__c</fullName>
        <label>Opportunity Parts Process Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMV_Type__c</fullName>
        <label>PMV Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Production Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Process_ID__c</fullName>
        <label>Sales Process ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <label>Sales Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_View_Column__c</fullName>
        <label>Team View Column</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Won_Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Won Stage</label>
        <type>Checkbox</type>
    </fields>
    <label>PMV Sales Stage Setting</label>
</CustomObject>